sentinel-web: add members page

--- a/apps/sentinel-web/app/templates/base.html
+++ b/apps/sentinel-web/app/templates/base.html
@@ -8,6 +8,7 @@
       href="{{ url_for('static', path='/css/output.css') }}"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
   </head>
   <body class="bg-gray-100">
     <div class="grid grid-cols-[256px_1fr] min-h-screen">
