--- a/apps/sentinel-web/app/templates/members/member_row.html
+++ b/apps/sentinel-web/app/templates/members/member_row.html
@@ -1,5 +1,6 @@
 <tr id="member-{{ member.id }}">
   <td>{{ member.name }}</td>
+  <td>{{ member.github_account }}</td>
   <td>
     <button
       hx-get="/members/{{ member.id }}"
