sentinel-web: fix displays for team members table

--- a/apps/sentinel-web/app/templates/members/list.html
+++ b/apps/sentinel-web/app/templates/members/list.html
@@ -31,6 +31,7 @@
     <thead>
       <tr>
         <th class="text-left">Name</th>
+        <th class="text-left">GitHub Account</th>
         <th class="text-left">Actions</th>
       </tr>
     </thead>
