--- a/apps/sentinel-web/app/templates/members/list.html
+++ b/apps/sentinel-web/app/templates/members/list.html
@@ -36,12 +36,8 @@
       </tr>
     </thead>
     <tbody id="member-list">
-      {% if members %} {% for member in members %} {% include
-      "members/member_row.html" %} {% endfor %} {% else %}
-      <tr>
-        <td colspan="2" class="text-center py-4">No members found</td>
-      </tr>
-      {% endif %}
+      {% for member in members %} {% include "members/member_row.html" %} {%
+      endfor %}
     </tbody>
   </table>
 </div>
