--- a/apps/sentinel-web/app/templates/members/member_row.html
+++ b/apps/sentinel-web/app/templates/members/member_row.html
@@ -8,6 +8,7 @@
     >
       View
     </a>
+    <span class="text-gray-400 ml-2">|</span>
     <button
       hx-delete="/members/{{ member.id }}"
       hx-target="#member-{{ member.id }}"
